	Bug #13590 ExecuteScalar returns only Int64 regardless of actual SQL type [added test case]
	Bug #13662 Prepare() truncates accented character input [already fixed, added test]
	Bug #11947 MySQLCommandBuilder mishandling CONCAT() aliased column [updated test case]
	Bug #13541 Prepare breaks if a parameter is used more than once [fixed]
	Bug #13632 the MySQLCommandBuilder.deriveparameters has not been updated for MySQL 5	
	
	Other changes
	-------------------------    
	Failure to provide parameters for out and inout values is now detected

    
9-27-05 - Version 1.0.6
 
    Bugs fixed or addressed
    -------------------------
    Bug #13036  Returns error when field names contain any of the following chars %<>()/ etc [fixed]
    Bug #12835	1.0.5 won't install on system with 1.0.4 installed [fixed]
    Bug #12978 	Fatal Error C# Compilation [fixed]
    Bug #13276 	Exception on serialize after inserting null value [fixed]
    Bug #13345 	Connecting from mono 1.1.8 to MySQL 5.0 using MySQL Connector/Net 1.0.5
    
    Other changes
    -------------------------
    Changed SocketStream and StreamCreator to be compatible with Mono
    Added options to not reset and reconfigure connections pulled from the pool
    Connections pulled from the pool that are not reset are also not pinged

8-24-05 - Version 1.0.5

	Bugs fixed or addressed
	-------------------------
	Bug #8667  	OUT parameters are not being valued [fixed]
	Bug #8574  	MySQLCommandBuilder unable to support inline functions [fixed]
	Bug #8509  	MySqlDataAdapter.FillSchema does not interpret unsigned integer	[fixed]
	Bug #8630  	Executing a query with the SchemaOnly option reads the entire resultset	[fixed]
	Bug #7398  	MySqlParameterCollection doesn't allow parameters without filled in names [fixed]
	Bug #7623  	Adding MySqlParameter causes error if MySqlDbType is Decimal [fixed]
	Bug #8929  	Timestamp values with a date > 10/29/9997 cause problems [fixed]